...
        padding: EdgeInsets.all(16),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.center,
          children: [
            SizedBox(height: 120),
            Text(
              "Welcome Back",
              textAlign: TextAlign.center,
              style: GoogleFonts.playfairDisplay(
                fontSize: 24,
                fontWeight: FontWeight.w700,
                color: Colors.blueAccent,
              ),
...
              },
            ),
            TextButton(
              onPressed: () {
                Navigator.of(context).pushNamed("/forgot");
              },
              child: Text("Forgot Password?"),
            ),
            SizedBox(height: 24),

            SocialSignIn(),

            SizedBox(height: 36),
...
