...
                        setState(() {
                          seconds--;
                        });

                      });
                    },
                    text: "Get OTP",
                  ),
          ],
        ),
      ),
    );
  }
...
